WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
315437
[AppKit Gestures] Can never get context menu with a right click (non-text)
https://bugs.webkit.org/show_bug.cgi?id=315437
Summary
[AppKit Gestures] Can never get context menu with a right click (non-text)
Richard Robinson
Reported
2026-05-23 20:17:24 PDT
.
Attachments
Add attachment
proposed patch, testcase, etc.
Richard Robinson
Comment 1
2026-05-23 20:17:26 PDT
<
rdar://problem/170741007
>
Richard Robinson
Comment 2
2026-05-23 20:18:04 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/65546
EWS
Comment 3
2026-05-27 11:09:43 PDT
Committed
313984@main
(4723be8cda9e): <
https://commits.webkit.org/313984@main
> Reviewed commits have been landed. Closing PR #65546 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug